Maui: fix release build issues

--- a/BingMapsRESTToolkit/Source/BingMapsRESTToolkit.Standard/BingMapsRESTToolkit.Standard.csproj
+++ b/BingMapsRESTToolkit/Source/BingMapsRESTToolkit.Standard/BingMapsRESTToolkit.Standard.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net7.0-windows10.0.19041.0;$(TargetFrameworks)</TargetFrameworks>
+    <TargetFrameworks Condition=" $([MSBuild]::IsOSPlatform('OSX')) And '$(Configuration)' == 'Release'">$(TargetFrameworks);net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
     <Version>1.1.5</Version>
     <Authors>Microsoft</Authors>
     <Company>Microsoft</Company>
