--- a/Timber/Timber.csproj
+++ b/Timber/Timber.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
+    <TargetFrameworks Condition=" $([MSBuild]::IsOSPlatform('OSX')) And '$(Configuration)' == 'Release'">$(TargetFrameworks);net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>TimberLog</AssemblyName>
