--- a/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
@@ -3,8 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.app-sandbox</key>
-    <true/>
-    <key>com.apple.security.personal-information.location</key>
-    <true/>
+	<true/>
+	<key>com.apple.security.personal-information.location</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.developer.weatherkit</key>
+	<true/>
 </dict>
 </plist>
