--- a/NuGet.config
+++ b/NuGet.config
@@ -2,6 +2,6 @@
 <configuration>
 	<packageSources>
 		<add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
-		<add key="Local NuGet" value="/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Maui/packages" />
+		<add key="Local NuGet" value="packages" />
 	</packageSources>
 </configuration>
