--- a/SimpleWeather.Weather-API/SimpleWeather.Weather-API.csproj
+++ b/SimpleWeather.Weather-API/SimpleWeather.Weather-API.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BingMapsRESTToolkit" Version="1.1.5" />
-
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleWeather.Extras\SimpleWeather.Extras.csproj" />
