windows: add support for adaptive card widgets

--- a/SimpleWeather.Windows/Properties/launchSettings.json
+++ b/SimpleWeather.Windows/Properties/launchSettings.json
@@ -4,6 +4,11 @@
       "commandName": "MsixPackage",
       "doNotLaunchApp": true
     },
+    "SimpleWeather.Windows (Package - COMServer)": {
+      "commandName": "MsixPackage",
+      "commandLineArgs": "-RegisterProcessAsComServer",
+      "doNotLaunchApp": true
+    },
     "SimpleWeather.Windows (Unpackaged)": {
       "commandName": "Project",
       "doNotLaunchApp": true
