nuget: update dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -265,6 +265,7 @@ API_KEY.txt
 /SimpleWeather.Weather-API/Keys/Keys.7z
 /SimpleWeather.Weather-API/Keys/WeatherKitConfig.cs
 /SimpleWeather.Weather-API/Keys/WeatherKitConfig.cs.bak
+/Maui/SimpleToolkit
 /Utf8Json.UniversalCodeGenerator
 /*.bat
 /*.bat.old
