--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -45,14 +45,14 @@
   <ItemGroup>
     <PackageReference Include="CacheCow.Client" Version="2.12.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-    <PackageReference Include="FirebaseAuthentication.net" Version="4.0.2" />
+    <PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
     <PackageReference Condition="'$(TargetFramework)' != 'net7.0-maccatalyst'" Include="Microsoft.AppCenter.Analytics" Version="5.0.2" />
     <PackageReference Condition="'$(TargetFramework)' != 'net7.0-maccatalyst'" Include="Microsoft.AppCenter.Crashes" Version="5.0.2" />
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NodaTime" Version="3.1.9" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.6" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.1" />
     <PackageReference Include="Svg.Skia" Version="0.5.18" />
@@ -60,9 +60,10 @@
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
     <PackageReference Include="TimberLog" Version="1.0.0" />
     <PackageReference Include="ZCS.Utf8Json" Version="1.4.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
   <ItemGroup Condition="!$(TargetFramework.Contains('windows'))">
-    <PackageReference Include="CommunityToolkit.Maui.Core" Version="5.2.0" />
+    <PackageReference Include="CommunityToolkit.Maui.Core" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\Strings\AQIndex.Designer.cs">
